--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -14,6 +15,10 @@ h3{
     color: orange;
     
 }
+p{
+    text-align: justify;
+    color: dimgray;
+}
 .half-width{
     width: 40%;
     float: left;
@@ -23,4 +28,25 @@ h3{
 
 .half-width img{
     width: 100%;
+}
+
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link_button{
+    text-decoration: none;
+    border-radius: 5px;
+    background-image: linear-gradient(45deg, lightsalmon,tomato);
+    padding: 10px 20px;
+    font-weight: 700;
+    color: white;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
